--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
   <h1>MT</h1>
-  <p>UI/UXデザイナー見習いです。</p>
-</body>
-</html>
+  <p>UI/UXデザイナー見習いです!ドットインストールで勉強中です！</p>
+  </body>
+  </html>
